--- a/src/scss/components/nav/_dash_topnav.scss
+++ b/src/scss/components/nav/_dash_topnav.scss
@@ -2,12 +2,10 @@
 
 .user-profile {
   display: flex;
-  height: 6vh;
+  height: 5vh;
   padding-right: 1.5rem;
   right: 0;
-  justify-content: space-between;
-  // color: $color-white;
-  // background-color: rgba($color-secondary, 0.8);
+  justify-content: flex-end;
 
   gap: 3rem;
 
